[package]
name = "ned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ned"
crate-type = ["cdylib"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[dependencies]
lazy_static = "1.4.0"
nvim-oxi = { version = "0.5", features = ["neovim-0-10", "libuv",] }
serde = "1.0.203"

